# omnicode-mcp

./: .dockerignore  .env.example  .gitignore  .mcp.json  CONTRIBUTING.md  Dockerfile  LICENSE  PROJECT_STATE.md  README.md  README_zh.md  _commit_msg.txt  deployment_build_record.md  docker-compose.yml  main.py  mcp_server.py  omnicode.example.toml  pyproject.toml
.github/workflows/: ci.yml
.kiro/settings/: mcp.json
_keep_/: README.md
api/v1/routers/: git.py  (+23 more)
core/: __init__.py  auth_middleware.py  config.py  dependencies.py  lifespan.py  log_stream.py  rbac_middleware.py  read_only_middleware.py
deploy/: Caddyfile  docker-compose.cloud.yml  nginx.conf  omnicode-mcp.service  omnicode.service
docs/: api-reference.md  api.md  architecture-v2.md  architecture.md  cloud-deployment.md  configuration.md  deployment.md  features.md  final-audit.md  index.md  llm-extras.md  roadmap.md  running.md  security.md  test_plan.md  usage.md  wave2-plan.md
extensions/vscode/: README.md  package.json
memory_system/: api_endpoints.py  memory_manager.py  models.py
omnicode/ast_engine/: __init__.py  chunker.py  graph.py  inheritance.py  parser.py
omnicode/config/: __init__.py  settings.py
omnicode/fs_browser/: __init__.py  browser.py
omnicode/git_context/: __init__.py  blame.py  git_manager.py  history.py  issue_linker.py
omnicode/guard/: __init__.py  analyzer.py  feedback_loop.py  models.py
omnicode/llm/: __init__.py  base.py  provider_registry.py  provider_selection.py  router.py  secret_box.py  token_manager.py
omnicode/pipelines/: __init__.py  edit.py  write.py
omnicode/search/: __init__.py  directory_lister.py  engine.py  hybrid_search.py  models.py  vector_store.py
omnicode/server/: mcp_tools.py
omnicode_adapters/: __init__.py
omnicode_adapters/agent/: __init__.py  client.py  watcher.py
omnicode_adapters/cli/: __init__.py  main.py
omnicode_adapters/http_api/: __init__.py
omnicode_adapters/mcp_server/: __init__.py  high_level_tools.py  high_level_tools.py.r21_corrupt_backup  http_auth.py
omnicode_adapters/web_console/: __init__.py
omnicode_core/: __init__.py
omnicode_core/ast/: __init__.py
omnicode_core/auth/: __init__.py  migrations.py  rotation.py  users.py
omnicode_core/capabilities/: __init__.py  languages.py  registry.py  toolchains.py
omnicode_core/config/: __init__.py  capabilities.py  features.py  runtime.py  toml_loader.py
omnicode_core/diagnostics/: __init__.py
omnicode_core/edit/: __init__.py  patch.py
omnicode_core/embeddings/: __init__.py  backend.py  models.py
omnicode_core/graph/: __init__.py  impact.py
omnicode_core/index/: __init__.py  file_tracker.py  sharding.py
omnicode_core/intelligence/: __init__.py  composer.py
omnicode_core/lsp/: __init__.py  bridge.py  shadow.py
omnicode_core/memory/: __init__.py  advisory.py
omnicode_core/observability/: __init__.py  audit_log.py  idempotency.py  metrics.py  rate_limiter.py
omnicode_core/read/: __init__.py
omnicode_core/search/: __init__.py  planner.py  reranker.py  text_grep.py
omnicode_core/security/: __init__.py  sandbox.py
omnicode_core/skills/: __init__.py  loader.py
omnicode_llm/: __init__.py
restored_sessions/: 2026-05-30T17-36-42-205Z_019e79f5-9149-78f0-a71c-1e01110d1fb8.md  2026-05-31T07-48-08-986Z_019e7d01-1709-7252-852d-e69a718b9074.md  SESSION_MEMORY.md
schemas/: requests.py
scripts/: README.md  benchmark_large_repo_hybrid.py  lint.bat  lint.sh  run-dev.bat  run-dev.sh  run.bat  run.sh  soak_hybrid_durability.py  test.bat  test.sh
templates/: index.html
tests/: conftest.py  tmp_r20_confidence_existing.py  tmp_r20_final_20260531_171334_existing.py  tmp_r21_cjk_dump.txt  tmp_r21_fffd_list.txt  tmp_r21_pyc_groups.txt  tmp_r21_pyc_strings.json  tmp_r21_pyc_tuples.txt  tmp_r21_zh_list.txt
utils/: validation.py
(+174 files in other folders)
